syntax = "proto3";

package comments;

option go_package = "proto;comments";

service Comments {
	rpc Store (StoreRequest) returns (StoreResponse) {}
	rpc Get (GetRequest) returns (GetResponse) {}
}

message Comment {
	string id = 1;
	string title = 2;
	string description = 3;
	int64 post_id = 4;	
	int64 user_id = 5;
	string created = 6;
}

message StoreRequest {
	string title = 1;
	string description = 2;
	int64 post_id = 3;	
	int64 user_id = 4;
	string created = 5;
}

message StoreResponse {
	string msg = 1;
}

message GetRequest {
	int64 post_id = 1;
	int64 user_id = 2;
}

message GetResponse {
	repeated Comment comments = 1;
}